# smart-speech-flow

./: .dockerignore  .env.example  .env.local  .flake8  .gitignore  .pre-commit-config.yaml  AI_DEVELOPMENT.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PHASE1_COMPLETION.md  PHASE2_COMPLETION.md  README.md  ROADMAP.md  SECURITY.md  SYSTEM_ARCHITECTURE.md  TESTS.md  TEST_STATUS.md  ToDos.md  debug_message_route.py  debug_websocket_message.py  docker-compose.yml  flake8-issues.txt  github_action_workflow_template.yml  models.md  openapi.yaml  package-lock.json  pyproject.toml  pytest.ini  requirements-dev.txt  setup.cfg  sonar-project.properties  start_services.sh  test_audio_validation_integration.py  test_concurrent_sessions.py  test_end_to_end_conversation.py  test_invalid_audio_validation.py  test_pipeline_audio_validation.py  test_production_load.py  test_results_1762347515.json  (+16 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-tests.yml  code-quality.yml
.sonarlint/: connectedMode.json
docs/: AUDIO_FORMAT_SOLUTION_GUIDE.md  AUDIO_RECORDING_MANUAL_TEST_CHECKLIST.md  AUDIO_RECORDING_ROLLBACK_STRATEGY.md  AUDIO_RECORDING_TEST_MATRIX.csv  AUDIO_RECORDING_TEST_MATRIX.md  E2E_TEST_CONVERSATION_VS_FRONTEND_COMPARISON.md  E2E_TEST_IMPROVEMENTS_IMPLEMENTED.md  FRONTEND_API_UPDATE_STATUS.md  FRONTEND_MESSAGE_HANDLING_FIX.md  FRONTEND_WEBSOCKET_DEBUG.md  GITHUB_QS_FIX.md  PRESS_CONFERENCE_BRIEFING.md  README.md  ROLLBACK_PLAN_METADATA_ENHANCEMENT.md  SYSTEM_ARCHITECTURE.md  WEBSOCKET_MESSAGE_ROLES.md  WEBSOCKET_PRODUCTION_CHECKLIST.md  api-conventions.md  code-quality.md  customer-api.md  deployment-websocket-reconnection.md  frontend_api.md  openapi.yaml  session_flow.md  websocket-architecture.md
docs/adr/: 001-websocket-singleton-pattern.md
docs/architecture/: SYSTEM_ARCHITECTURE.md  session-flow.md  websocket-architecture-analysis.md  websocket-message-flow-diagrams.md
docs/archive/: Fachartikel.md  ToDos.md  response.json  (+1 more)
letsencrypt/: acme.json
monitoring/: alert_rules.yml  loki-config.yaml  prometheus.yml  promtail-config.yaml
openspec/: project.md
scripts/: backup-common.sh  backup-daily.sh  backup-grafana.sh  backup-monthly.sh  backup-weekly.sh  check_dependencies.sh  install-backup-cron.sh  quality-check.sh  simple_dependency_check.sh  test_audio_recording_e2e.py  test_conversation.sh  test_websocket_connection.py  test_websocket_fallback.sh  verify-backups.sh
services/: gpu_metrics.py
services/asr/: Dockerfile  (+3 more)
tests/: conftest.py  integration_test_audio_validation.py  test_admin_routes.py  test_all_languages_supported.py  test_api_contract_integration.py  test_audio_recording_integration.py  test_audio_upload_integration.py  test_audio_validation.py  test_circuit_breaker_integration.py  test_cross_browser_audio.py  test_end_to_end_conversation.py  test_mobile_optimization.py  test_openapi_validation.py  test_pipeline_metadata_enhancement.py  test_pipeline_metadata_integration.py  test_production_smoke_flows.py  test_rate_limiting.py  test_service_app_helpers.py  test_session_manager.py  test_session_timeout.py  test_sonar_backlog_coverage.py  test_sonar_gate_regressions.py  test_text_pipeline.py  test_translation_refiner.py  test_unified_message_endpoint.py  test_websocket_manager.py
(+218 files in other folders)
